// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSectionHeader should call any custom onCLose that is provided by the user correctly when clicked 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="custom title"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should call any custom onOpen that is provided by the user correctly when clicked 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="custom title"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should render a default toggle section header 1`] = `
<div>
  <div
    aria-expanded="false"
    class="section-header is-interactable"
    role="button"
    tabindex="0"
    text="default title"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      >
        <div
          class="accordion-icon-wrapper"
        >
          <span
            class="accordion-icon"
          />
        </div>
      </div>
      <div
        class="fill"
      >
        <h2
          class="title"
        />
      </div>
      <div
        class="fit"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    class="toggle"
  />
</div>
`;

exports[`ToggleSectionHeader should render an animated toggle section header 1`] = `
<div>
  <div
    aria-expanded="false"
    class="section-header is-interactable"
    role="button"
    tabindex="0"
    text="animated title"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      >
        <div
          class="accordion-icon-wrapper"
        >
          <span
            class="accordion-icon"
          />
        </div>
      </div>
      <div
        class="fill"
      >
        <h2
          class="title"
        />
      </div>
      <div
        class="fit"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    class="toggle"
  >
    <div
      aria-hidden="true"
      class="rah-static rah-static--height-zero"
      style="height:0;overflow:hidden"
    >
      <div>
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`ToggleSectionHeader should render an initially open toggle section header 1`] = `
<div>
  <div
    aria-expanded="true"
    class="section-header is-interactable"
    role="button"
    tabindex="0"
    text="initially open title"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      >
        <div
          class="accordion-icon-wrapper"
        >
          <span
            class="accordion-icon is-open"
          />
        </div>
      </div>
      <div
        class="fill"
      >
        <h2
          class="title"
        />
      </div>
      <div
        class="fit"
      />
    </div>
  </div>
  <div
    aria-hidden="false"
    class="toggle"
  >
    Test
  </div>
</div>
`;

exports[`ToggleSectionHeader should render an open toggle section header when clicked 1`] = `
<ToggleSectionHeader
  isAnimated={false}
  isInitiallyOpen={false}
  isTransparent={false}
  level={2}
  sectionHeaderAttrs={Object {}}
  title="opens on click title"
>
  <div>
    <SectionHeader
      aria-expanded={true}
      isOpen={true}
      isTransparent={false}
      level={2}
      onClick={[Function]}
      text="opens on click title"
    >
      <div
        aria-expanded={true}
        className="section-header is-interactable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex="0"
        text="opens on click title"
      >
        <Arrange
          className="title-arrange"
          fill={
            <h2
              className="title"
            />
          }
          fitStart={
            <div
              className="accordion-icon-wrapper"
            >
              <span
                className="accordion-icon is-open"
              />
            </div>
          }
        >
          <div
            className="arrange title-arrange"
          >
            <div
              className="fit"
            >
              <div
                className="accordion-icon-wrapper"
              >
                <span
                  className="accordion-icon is-open"
                />
              </div>
            </div>
            <div
              className="fill"
            >
              <h2
                className="title"
              />
            </div>
            <div
              className="fit"
            />
          </div>
        </Arrange>
      </div>
    </SectionHeader>
    <Toggle
      isAnimated={false}
      isOpen={true}
    >
      <div
        aria-hidden={false}
        className="toggle"
      >
        opens on click section header
      </div>
    </Toggle>
  </div>
</ToggleSectionHeader>
`;

exports[`ToggleSectionHeader should set sectionHeaderAttrs prop correctly 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    backgroundColor="red"
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="sectionHeaderAttrs props test"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should set the children prop correctly 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={2}
    onClick={[Function]}
    text="sectionHeaderAttrs props test"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    test child
  </Toggle>
</div>
`;

exports[`ToggleSectionHeader should set the level prop correctly 1`] = `
<div>
  <SectionHeader
    aria-expanded={false}
    isOpen={false}
    isTransparent={false}
    level={1}
    onClick={[Function]}
    text="sectionHeaderAttrs props test"
  />
  <Toggle
    isAnimated={false}
    isOpen={false}
  >
    Test
  </Toggle>
</div>
`;
